# AquaEngine

./: .gitmodules  CMakeLists.txt
shaders/color/: color.vert
src/: aqua.c  aqua.h
src/event/: event.c  event.h
src/fly-camera/: fly-camera.c  fly-camera.h
src/gfx/: color.h
src/gfx/camera/: camera.c  camera.h
src/gfx/material/: material.c  material.h
src/gfx/mesh/: mesh.c  mesh.h
src/gfx/model/: model.c  model.h
src/gfx/renderer/: renderer.c  renderer.h  resource-manager.c  resource-manager.h
src/gfx/shader/: shader.c  shader.h
src/gfx/texture/: texture.c  texture.h
src/gfx/window/: window.c  window.h
src/input/: input.c  input.h
src/model/: model.c  model.h
src/project/: project.h
src/shaders/material/: material.frag
src/tick/: tick.c  tick.h
src/utils/: base-types.h
src/utils/file/: file.c
